fix(NOENT): fix docs
