# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/customers": {
+        "/api/customers": {
             "get": {
                 "description": "Get all customers",
                 "consumes": [
@@ -18,7 +18,10 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_handlers.CustomerCreatedResponse"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/github_com_EdmundHusserl_CRM_internal_repository.Customer"
+                            }
                         }
                     },
                     "500": {
@@ -152,7 +155,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_handlers.CustomerCreatedResponse"
+                            "$ref": "#/definitions/github_com_EdmundHusserl_CRM_internal_repository.Customer"
                         }
                     },
                     "400": {
@@ -176,7 +179,7 @@
                 }
             }
         },
-        "/customers/{id}": {
+        "/api/customers/{id}": {
             "get": {
                 "description": "Get a customer by id",
                 "consumes": [
@@ -190,7 +193,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_handlers.CustomerCreatedResponse"
+                            "$ref": "#/definitions/github_com_EdmundHusserl_CRM_internal_repository.Customer"
                         }
                     },
                     "404": {
@@ -231,6 +234,29 @@
         }
     },
     "definitions": {
+        "github_com_EdmundHusserl_CRM_internal_repository.Customer": {
+            "type": "object",
+            "properties": {
+                "contacted": {
+                    "type": "boolean"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "phone_number": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "integer"
+                }
+            }
+        },
         "internal_handlers.CustomerCreatedResponse": {
             "type": "object",
             "properties": {
